# pwr-gosp

./: .gitignore  CMakeLists.txt  Makefile  PROTOCOL  debug.c  debug.h  device.c  device.h  dht22.c  dht22.h  gpio.h  main.c  misc.c  misc.h  protocol.h  tcp.c  tcp.h
scripts/: rpiflash.sh
simulator/: Makefile  tcp_client.c  tcp_server.c
